{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 17,
  "lineage": "2321f536-a315-e671-e8e2-5f05bb46df74",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:098922872245:loadbalancer/app/partner-commissions-alb/3b13ebfdbf9344f4",
            "arn_suffix": "app/partner-commissions-alb/3b13ebfdbf9344f4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "partner-commissions-alb-1691975959.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:098922872245:loadbalancer/app/partner-commissions-alb/3b13ebfdbf9344f4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "partner-commissions-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-b69783ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-223bd57e"
              },
              {
                "subnet_id": "subnet-2e56a849"
              }
            ],
            "subnets": [
              "subnet-223bd57e",
              "subnet-2e56a849"
            ],
            "tags": {
              "Name": "partner-commissions-alb"
            },
            "tags_all": {
              "Name": "partner-commissions-alb"
            },
            "vpc_id": "vpc-8fc695f4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_group.aws_security_group.vpc_security_group",
            "module.subnets.aws_subnet.subnet_a",
            "module.subnets.aws_subnet.subnet_b",
            "module.vpc.aws_vpc.vpc_general"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:098922872245:listener/app/partner-commissions-alb/3b13ebfdbf9344f4/0a02b33f23bc14e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:098922872245:listener/app/partner-commissions-alb/3b13ebfdbf9344f4/0a02b33f23bc14e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:098922872245:loadbalancer/app/partner-commissions-alb/3b13ebfdbf9344f4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.app_alb",
            "module.security_group.aws_security_group.vpc_security_group",
            "module.subnets.aws_subnet.subnet_a",
            "module.subnets.aws_subnet.subnet_b",
            "module.vpc.aws_vpc.vpc_general"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:098922872245:listener/app/partner-commissions-alb/3b13ebfdbf9344f4/a8f61b6d1da0281d",
            "certificate_arn": "arn:aws:acm:us-east-1:098922872245:certificate/5cb522ff-8bfd-4384-9147-e543f2a851e1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "502 Bad Gateway",
                    "status_code": "502"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:098922872245:listener/app/partner-commissions-alb/3b13ebfdbf9344f4/a8f61b6d1da0281d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:098922872245:loadbalancer/app/partner-commissions-alb/3b13ebfdbf9344f4",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.app_alb",
            "module.security_group.aws_security_group.vpc_security_group",
            "module.subnets.aws_subnet.subnet_a",
            "module.subnets.aws_subnet.subnet_b",
            "module.vpc.aws_vpc.vpc_general"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_host_header_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:098922872245:targetgroup/partner-commissions-tg/3d339000532eb17b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:098922872245:listener-rule/app/partner-commissions-alb/3b13ebfdbf9344f4/a8f61b6d1da0281d/b86b9c8de788e45c",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "pcs.instrumental.net"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:098922872245:listener-rule/app/partner-commissions-alb/3b13ebfdbf9344f4/a8f61b6d1da0281d/b86b9c8de788e45c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:098922872245:listener/app/partner-commissions-alb/3b13ebfdbf9344f4/a8f61b6d1da0281d",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.app_alb",
            "module.load_balancer.aws_lb_listener.https_listener",
            "module.security_group.aws_security_group.vpc_security_group",
            "module.subnets.aws_subnet.subnet_a",
            "module.subnets.aws_subnet.subnet_b",
            "module.target_group.aws_lb_target_group.ecs_tg",
            "module.vpc.aws_vpc.vpc_general"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:098922872245:targetgroup/partner-commissions-tg/3d339000532eb17b",
            "arn_suffix": "targetgroup/partner-commissions-tg/3d339000532eb17b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:098922872245:targetgroup/partner-commissions-tg/3d339000532eb17b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "partner-commissions-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-8fc695f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_general"
          ]
        }
      ]
    }
  ]
}